--- a/package.json
+++ b/package.json
@@ -16,9 +16,6 @@
     "test:run": "vitest run"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-rapide": "^1.0.35",
     "bcryptjs": "^3.0.2",
     "better-express-store": "^1.0.5",
     "better-sqlite3": "^11.10.0",
@@ -28,12 +25,19 @@
     "express": "^5.1.0",
     "express-http-proxy": "^2.1.2",
     "express-session": "^1.18.1",
+    "react": "^19.1.1",
     "react-bootstrap": "^2.10.9",
+    "react-dom": "^19.1.1",
+    "react-rapide": "^1.0.35",
     "react-router-dom": "^7.5.0",
     "sass": "1.77.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.5.2",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^4.3.4",
@@ -41,11 +45,10 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
+    "ts-node": "^10.9.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "vite": "^6.2.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
     "vitest": "^3.2.4"
   }
 }
