--- a/package.json
+++ b/package.json
@@ -1,54 +1,34 @@
 {
-  "name": "exemple-branching",
+  "name": "training-diary",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node node_modules/react-rapide dev",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "node node_modules/react-rapide preview",
-    "start": "node node_modules/react-rapide dev",
-    "rr": "node node_modules/react-rapide",
-    "react-rapide": "node node_modules/react-rapide",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "better-express-store": "^1.0.5",
-    "better-sqlite3": "^11.10.0",
-    "bootstrap": "^5.3.6",
-    "callsites": "^4.2.0",
-    "chokidar": "^4.0.3",
-    "express": "^5.1.0",
-    "express-http-proxy": "^2.1.2",
-    "express-session": "^1.18.1",
-    "react": "^19.1.1",
-    "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.1.1",
-    "react-rapide": "^1.0.35",
-    "react-router-dom": "^7.5.0",
-    "sass": "1.77.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
+    "bootstrap": "^5.3.0",
+    "react-bootstrap": "^2.7.2",
+    "axios": "^1.3.4",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.5.2",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^15.15.0",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.39.1",
-    "vite": "^6.2.0",
-    "vitest": "^3.2.4"
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.38.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.2"
   }
 }
