--- a/package.json
+++ b/package.json
@@ -10,25 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1",
-    "bootstrap": "^5.3.0",
-    "react-bootstrap": "^2.7.2",
-    "axios": "^1.3.4",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "axios": "^1.7.0",
+    "bootstrap": "^5.3.3",
+    "react": "^19.1.1",
+    "react-bootstrap": "^2.10.0",
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "@types/node": "^22.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "eslint": "^9.0.0",
+    "typescript": "^5.5.0",
+    "typescript-eslint": "^8.0.0",
+    "vite": "^5.4.0",
+    "vite-plugin-pwa": "^0.20.0"
   }
 }
