--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.3.0",
     "eslint": "^9.0.0",
     "typescript": "^5.5.0",
