--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # if the backend/_db.sqlite3 is missing the backend will
 # create it from db_template/_db.sqlite3
 backend/_db.sqlite3
+backend/_db.sqlite3-journal
+
 
 # Do not git control build related .NET folders
 backend/obj
