--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-"scripts": {
-  "dev": "concurrently \"cd backend && dotnet run 3001 ../dist _db.sqlite3\" \"vite\"",
-  "build": "tsc && vite build",
-  "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-  "preview": "vite preview"
-},
+  "scripts": {
+    "dev": "concurrently \"cd backend && dotnet run 3001 ../dist _db.sqlite3\" \"vite\"",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "axios": "^1.7.0",
     "bootstrap": "^5.3.3",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
