--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "concurrently": "^9.2.1",
     "eslint": "^9.18.0",
+    "sass-embedded": "^1.83.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.19.1",
     "vite": "^6.0.7",
